Update portfolio layout and styles

--- a/index.html
+++ b/index.html
@@ -14,26 +14,27 @@
             <div class="logo"data-aos="zoom-in"data-aos-duration="1000">
                 <span>My Portfolio</span>
             </div>
+            <input type="checkbox" id="menu-toggle" hidden>
+            <label for="menu-toggle" class="menu-icon">&#9776;</label>
+
             <div class="links">
-                <div class="link" data-aos="fade-up"data-aos-duration="1000"data-aos-delay="100"><a href="#">Home</a></div>
-                <div class="link" data-aos="fade-up"data-aos-duration="1000"data-aos-delay="200"><a href="#">About</a></div>
-                <div class="link" data-aos="fade-up"data-aos-duration="1000"data-aos-delay="300"><a href="#">Skills</a></div>
-                <div class="link" data-aos="fade-up"data-aos-duration="1000"data-aos-delay="400"><a href="#">Services</a></div>
-                <div class="link" data-aos="fade-up"data-aos-duration="1000"data-aos-delay="500"><a href="#">Experience</a></div>
-                <div class="link contact-link" data-aos="fade-up"data-aos-duration="1000"data-aos-delay="600"><a href="#">Contact</a></div>
-
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a href="#">Home</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"><a href="#">About</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300"><a href="#">Skills</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400"><a href="#">Services</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"><a href="#">Experience</a></div>
+                <div class="link contact-link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"><a href="#">Contact</a></div>
             </div>
-
+            
         </div>
-</div>
-</nav>      
-</div>
+
+    </nav>      
 
 
 
-  </nav>
+
         <section>
-            <div class="main container">
+            <div class="main-container">
                 <div class="profile-container"data-aos="zoom-in-right"data-aos-duration="2500">
                     <img src="IMG_5767.JPG"alt="Profile Picture"></div>
                 </div>
@@ -42,11 +43,11 @@
                     <h1 data-aos="fade-left"data-aos-duration="1000"data-aos-delay="800">Hey I'm<span> Olivia</span></h1>
                     <div class="typewriter" data-aos="fade-right"data-aos-duration="1000"data-aos-delay="900">I'm a<span></span></div>
                     <p data-aos="flip-up"data-aos-duration="1000"data-aos-delay="1000">A dedicated Management Information Systems<br> student with a strong foundation in data analysis.<br>
-                        Currently expanding technical skills through<br> web development
-                                                <br>                                        </p>
+                        Currently expanding technical skills through<br> web development </p>
                     <div class="social-links" data-aos="flip-down"data-aos-duration="1000"data-aos-delay="1200">
                         <a href="#"><i class="fa-brands fa-codepen"></i></a>
                         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="#"><i class="fa-brands fa-github"></i></a>
                     </div>
                     <div class="btn" data-aos="zoom-out-left"data-aos-duration="1000"data-aos-delay="1300">
                         <button>Download CV</button>
